<resources>
    <string name="app_name">Alhambra</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="quitSelection">Quit Selection</string>
    <string name="highlightOnHololens">Navigate</string>
    <string name="teleportOnHololens">Teleport</string>
    <string name="startAnnotation">Start Annotation</string>
    <string name="tapToAddAnnotation">See HoloLens to add an Annotation</string>
</resources>