<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/annotationTooltip">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startAnnotation"
            android:id="@+id/startAnnotationButton"/>
    </LinearLayout>

    <!-- By design, we should have height > width -->
    <com.sereno.view.AnnotationCanvasView
        android:id="@+id/annotationCanvas"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/annotationTooltip"/>

        <com.sereno.view.ColorPickerView
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:id="@+id/colorPicker"
            android:layout_toEndOf="@id/annotationCanvas"
            app:circleRadius="5dp"
            app:pickerHueHeight="15dp"
            app:pickerSpace="5dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_alignBottom="@id/annotationCanvas"
            android:layout_toEndOf="@id/annotationCanvas">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/confirmAnnotation"
                android:text="@string/confirm"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancelAnnotation"
                android:text="@string/cancel"/>
    </LinearLayout>
</RelativeLayout>