<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:rowCount="3"
    android:stretchMode="columnWidth"
    android:scrollbars="vertical"
    tools:context="com.alhambra.fragment.PreviewFragment">


    <!-- Previews -->
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/treeColor"
        android:id="@+id/scrollPreviewLayout">
        <com.sereno.view.TreeView
            android:id="@+id/previewLayout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="5dp"
            app:topOffsetPerChild="10px"
            app:leftOffsetPerLevel="25px"
            app:strokeWidth="3px"
            app:extendHeight="64px"
            app:extendWidth="64px"
            app:inExtendSrc="@drawable/in_expend"
            app:notExtendSrc="@drawable/not_expend"
            android:textAlignment="center"
            />
    </ScrollView>

    <!-- Next / Previous / quit selection buttons -->
    <LinearLayout
        android:id="@+id/layoutControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/scrollPreviewLayout"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/previousEntryButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:src="@drawable/previous"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/previous"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/next"/>
            <ImageButton
                android:id="@+id/nextEntryButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:src="@drawable/next" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center|end"
            android:layout_gravity="center|end">

        </LinearLayout>

    </LinearLayout>

    <!-- The main part of the view displaying information of the selected entry -->
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="0"
        android:layout_below="@id/layoutControl"
        android:layout_toEndOf="@id/scrollPreviewLayout"
        android:fillViewport="true"
        android:paddingStart="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/highlightButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/highlightOnHololens" />

                <Button
                    android:id="@+id/teleportButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_gap"
                    android:text="@string/teleportOnHololens" />

                <Button
                    android:id="@+id/quitSelectionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dip"
                    android:backgroundTint="#009688"
                    android:text="@string/quitSelection" />
            </LinearLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/mainAnnotationChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </com.google.android.material.chip.ChipGroup>

            <ImageView
                android:id="@+id/mainImageEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/mainTextEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:padding="0dp"
                android:scrollHorizontally="false" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>